[SW-2235] Setup infra for running tests on Kubernetes (#2119)

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,5 @@ supportedSparkVersions=2.1 2.2 2.3 2.4
 spark=2.4
 # Sparkling Water Version
 version=3.32.0.1-1-SNAPSHOT
+# Spark version from which is Kubernetes Supported
+kubernetesSupportSinceSpark=2.3
