--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'base'
 apply plugin: 'com.bmuschko.docker-remote-api'
 
 import com.bmuschko.gradle.docker.tasks.image.Dockerfile
+import org.gradle.util.VersionNumber
 
 description = "Build docker images for Kubernetes with Sparkling Water"
 
@@ -21,8 +22,19 @@ task createScalaDockerfile(type: Dockerfile) {
 task createRDockerfile(type: Dockerfile) {
   destFile = outputFileR
   arg "spark_version"
-  from 'spark-r:$spark_version'
-  runCommand "apk add libc-dev linux-headers g++ libxml2-dev"
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("2.4.0")) {
+    from 'spark-r:$spark_version'
+  } else {
+    from 'spark:$spark_version'
+  }
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("2.4.5")) {
+    runCommand "apt-get install -y libc-dev libssl-dev libcurl4-openssl-dev g++ libxml2-dev"
+  } else {
+    runCommand "apk add libc-dev linux-headers g++ libxml2-dev"
+  }
+  if (VersionNumber.parse(sparkVersion) < VersionNumber.parse("2.4.0")) {
+    runCommand "apk add --update R R-dev make"
+  }
   runCommand """\\
                 R -e 'install.packages("xml2", repos = "http://cran.us.r-project.org")' && \\
                 R -e 'install.packages("openssl", repos = "http://cran.us.r-project.org")' && \\
@@ -41,14 +53,25 @@ task createRDockerfile(type: Dockerfile) {
 task createPythonDockerfile(type: Dockerfile) {
   destFile = outputFilePython
   arg "spark_version"
-  from 'spark-py:$spark_version'
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("2.4.0")) {
+    from 'spark-py:$spark_version'
+  } else {
+    from 'spark:$spark_version'
+  }
+  if (VersionNumber.parse(sparkVersion) < VersionNumber.parse("2.4.0")) {
+    runCommand "apk add --update py-pip"
+  }
   copyFile("h2o_pysparkling_${sparkMajorVersion}-${version}.zip", "/opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip")
-  runCommand """\\
-                pip install /opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip && \\
+  runCommand "pip install /opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip"
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("2.4.5")) {
+    runCommand "pip install numpy"
+  } else {
+    runCommand """\\
                 apk add build-base python-dev && \\
                 pip install numpy && \\
                 apk del build-base python-dev
                 """
+  }
 }
 
 task buildDockerfiles(dependsOn: [createPythonDockerfile, createRDockerfile, createScalaDockerfile])
