--- a/ml/build.gradle
+++ b/ml/build.gradle
@@ -46,6 +46,7 @@ dependencies {
   testImplementation('org.apache.hadoop:hadoop-mapreduce-client-core') { version { strictly '2.7.2' } }
   testImplementation('org.apache.hadoop:hadoop-common:2.7.2') { version { strictly '2.7.2' } }
   testImplementation('commons-io:commons-io:2.4') { version { strictly '2.4' } }
+  testImplementation(project(':sparkling-water-api-generation'))
 }
 
 test {
