--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -55,7 +55,8 @@ task createRDockerfile(type: Dockerfile) {
   runCommand """\\
               SPARKLYR_JARS=\$(R -e 'system.file("java/", package = "sparklyr")' 2>/dev/null | grep "\\[1\\]" | cut -d ' ' -f 2 | tr -d '"') && \\
               mkdir -p /opt/sparklyr && \\
-              cp -R "\${SPARKLYR_JARS}/." /opt/sparklyr
+              CORRECT_JAR=\$(ls \$SPARKLYR_JARS/java/sparklyr-${sparkMajorVersion}*) && \\
+              cp \$CORRECT_JAR /opt/sparklyr
              """
 }
 
