--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -52,6 +52,7 @@ task createRDockerfile(type: Dockerfile) {
   runCommand "cd /opt/spark/R/lib && R CMD INSTALL rsparkling_${version}.tar.gz"
   copyFile("r/initTest.R", "/opt/sparkling-water/tests/initTest.R")
   copyFile("r/submit.R", "/opt/sparkling-water/tests/submit.R")
+  copyFile("sparkling-water-assembly_2.11-${version}-all.jar", "/opt/spark/jars/sparkling-water-assembly_2.11-${version}-all.jar")
   runCommand """\\
               SPARKLYR_JARS=\$(R -e 'system.file("java/", package = "sparklyr")' 2>/dev/null | grep "\\[1\\]" | cut -d ' ' -f 2 | tr -d '"') && \\
               mkdir -p /opt/sparklyr && \\
