[SW-2281] Treat sphinx warnings as errors as they usually mean doc is broken

--- a/doc/build.gradle
+++ b/doc/build.gradle
@@ -52,6 +52,7 @@ sphinx {
   if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse(kubernetesSupportSinceSpark)) {
     tags = "SupportsKubernetes"
   }
+  warningsAsErrors = true
 }
 
 task docJar(type: Jar) {
