[SW-2281] Treat sphinx warnings as errors as they usually mean doc is broken (#2147)
(cherry picked from commit c6b66698baa1362ccd98cdc12f20c806ab6c7208)

--- a/doc/build.gradle
+++ b/doc/build.gradle
@@ -48,6 +48,7 @@ task substitute() {
 
 sphinx {
   environments = ["PYTHONWARNINGS" : ""]
+  warningsAsErrors = true
 }
 
 task docJar(type: Jar) {
