--- a/gradle.properties
+++ b/gradle.properties
@@ -29,4 +29,4 @@ supportedSparkVersions=2.1 2.2 2.3 2.4
 # Select for which Spark version is Sparkling Water built by default
 spark=2.4
 # Sparkling Water Version
-version=3.30.0.4-1-SNAPSHOT
+version=3.30.0.4-1
