--- a/py/build.gradle
+++ b/py/build.gradle
@@ -307,6 +307,7 @@ def createIntegTestArgs() {
     "spark.test.home=${sparkHome}",
     "spark.ext.h2o.log.dir=${buildDir}/h2ologs-itest",
     "spark.ext.h2o.external.disable.version.check=true"
+    "spark.ext.h2o.testing.path.to.sw.jar=${configurations.sparklingWaterAssemblyJar.singleFile}"
   ]
 }
 
