[SW-2326] Add support for spark 3.0

--- a/gradle-spark2.3.properties
+++ b/gradle-spark2.3.properties
@@ -2,3 +2,4 @@ sparkVersion=2.3.4
 minSupportedJavaVersion=1.8
 supportedEmrVersion=emr-5.19.0
 unsupportedMinorSparkVersions=
+scalaBaseVersion=2.11
