--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ h2oMajorName=zahradnik
 # H2O Build version, defined here to be overriden by -P option
 h2oBuild=5
 # Scala version for Sparkling Water. By default, for 2.11 we use 2.11.12.
-scalaBaseVersion=2.11
+
 # Version of Mojo Pipeline library
 mojoPipelineVersion=2.3.0
 # Defines whether to run tests with Driverless AI mojo pipelines
@@ -25,9 +25,9 @@ dockerImageVersion=31
 # Is this build nightly build
 isNightlyBuild=false
 # Supported Major Spark Versions
-supportedSparkVersions=2.1 2.2 2.3 2.4
+supportedSparkVersions=2.1 2.2 2.3 2.4 3.0
 # Select for which Spark version is Sparkling Water built by default
-spark=2.4
+spark=3.0
 # Sparkling Water Version
 version=3.32.0.1-1-SNAPSHOT
 # Spark version from which is Kubernetes Supported
