--- a/gradle-spark2.1.properties
+++ b/gradle-spark2.1.properties
@@ -2,3 +2,4 @@ sparkVersion=2.1.3
 minSupportedJavaVersion=1.8
 supportedEmrVersion=emr-5.7.0
 unsupportedMinorSparkVersions=
+scalaBaseVersion=2.11
