--- a/gradle-spark2.2.properties
+++ b/gradle-spark2.2.properties
@@ -2,3 +2,4 @@ sparkVersion=2.2.3
 minSupportedJavaVersion=1.8
 supportedEmrVersion=emr-5.12.0
 unsupportedMinorSparkVersions=
+scalaBaseVersion=2.11
