--- a/gradle-spark2.4.properties
+++ b/gradle-spark2.4.properties
@@ -2,3 +2,4 @@ sparkVersion=2.4.6
 minSupportedJavaVersion=1.8
 supportedEmrVersion=emr-5.26.0
 unsupportedMinorSparkVersions=2.4.2
+scalaBaseVersion=2.11
