[SW-2326] Add support for spark 3.0 (#2192)
(cherry picked from commit d68d0c7245e917d8009657561b95bfac55fba50d)

--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ configure(allprojects) { project ->
   apply plugin: "com.diffplug.gradle.spotless"
   // Version of main components
   ext {
-    scalaBaseVersion = project.findProperty('scalaBaseVersion') ?: defaultScalaBaseVersion
+    scalaBaseVersion = loadVersionSpecificProp("scalaBaseVersion", versionSpecificProps)
     scalaVersion = supportedScalaBaseVersions[scalaBaseVersion]
     scalaTestVersion = scalaTestVersions[scalaBaseVersion]
     // h2oBuild property is defined in gradle.properties
