[SW-2333] Update spotless to 4.4.0

--- a/ml/build.gradle
+++ b/ml/build.gradle
@@ -14,7 +14,7 @@ sourceSets {
 spotless {
   scala {
     target project.fileTree(project.rootDir) {
-      include '**/*.scala'
+      include 'ml/src/**/*.scala'
       exclude "ml/src-gen/main/**/*.scala"
     }
   }
