[SW-2333][FollowUp] Update spotless to 4.4.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,4 @@ spark=3.0
 version=3.32.0.1-1-SNAPSHOT
 # Spark version from which is Kubernetes Supported
 kubernetesSupportSinceSpark=2.4
+spotlessModern=true
