--- a/build.gradle
+++ b/build.gradle
@@ -217,7 +217,7 @@ configure(subprojects) { project ->
 
   spotless {
     format 'misc', {
-      target '**/*.sh', '**/*.gitignore', '**/*.properties', '**/*.R', '**/*.py', '**/*.tf', '**/*.xml', "**/*.groovy"
+      target '**/*.sh', '**/*.gitignore', '**/*.properties', '**/*.R', '**/*.tf', '**/*.xml', "**/*.groovy"
       trimTrailingWhitespace()
       endWithNewline()
     }
