--- a/doc/build.gradle
+++ b/doc/build.gradle
@@ -40,6 +40,7 @@ task substitute() {
           .replaceAll("SUBST_H2O_BUILD_NUMBER", h2oBuild)
           .replaceAll("SUBST_MIN_SUPPORTED_JAVA", minSupportedJavaVersion)
           .replaceAll("SUBST_EMR_VERSION", supportedEmrVersion)
+          .replaceAll("SUBST_SCALA_BASE_VERSION", scalaBaseVersion)
           .replaceAll("SUBST_H2O_DRIVERS_LIST", getSupportedHadoopDistributions(h2oMajorName, h2oBuild))
         file(it).write(contents, 'UTF-8')
       }
