--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -28,11 +28,11 @@ task createExternalBackendDockerfile(type: Dockerfile) {
   from "openjdk:11"
   runCommand "mkdir -p /opt/h2oai/h2o-3/"
   copyFile("h2o.jar", "/opt/h2oai/h2o-3/")
-  copyFile("sparkling-water-assembly-extensions_2.11-${version}-all.jar", "/opt/h2oai/h2o-3/")
+  copyFile("sparkling-water-assembly-extensions_${scalaBaseVersion}-${version}-all.jar", "/opt/h2oai/h2o-3/")
   defaultCommand(
     "java",
     "-cp",
-    "/opt/h2oai/h2o-3/sparkling-water-assembly-extensions_2.11-${version}-all.jar:/opt/h2oai/h2o-3/h2o.jar",
+    "/opt/h2oai/h2o-3/sparkling-water-assembly-extensions_${scalaBaseVersion}-${version}-all.jar:/opt/h2oai/h2o-3/h2o.jar",
     "-XX:+UseContainerSupport",
     "-XX:MaxRAMPercentage=50",
     "water.H2OApp")
@@ -50,6 +50,9 @@ task createRDockerfile(type: Dockerfile) {
   destFile = outputFileR
   arg "spark_version"
   from 'spark-r:$spark_version'
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("3.0.0")) {
+    user "0"
+  }
   if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("2.4.5")) {
     runCommand "apt-get install -y libc-dev libssl-dev libcurl4-openssl-dev g++ libxml2-dev"
   } else {
@@ -70,18 +73,25 @@ task createRDockerfile(type: Dockerfile) {
   copyFile("rsparkling_${version}.tar.gz", "/opt/spark/R/lib/rsparkling_${version}.tar.gz")
   runCommand "cd /opt/spark/R/lib && R CMD INSTALL rsparkling_${version}.tar.gz"
   copyFile("r/initTest.R", "/opt/sparkling-water/tests/initTest.R")
-  copyFile("sparkling-water-assembly_2.11-${version}-all.jar", "/opt/spark/jars/sparkling-water-assembly_2.11-${version}-all.jar")
+  copyFile("sparkling-water-assembly_${scalaBaseVersion}-${version}-all.jar", "/opt/spark/jars/sparkling-water-assembly_${scalaBaseVersion}-${version}-all.jar")
   runCommand """\\
               SPARKLYR_JARS=\$(R -e 'system.file("java/", package = "sparklyr")' 2>/dev/null | grep "\\[1\\]" | cut -d ' ' -f 2 | tr -d '"') && \\
               mkdir -p /opt/sparklyr && \\
               cp -R "\${SPARKLYR_JARS}/." /opt/sparklyr
              """
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("3.0.0")) {
+    arg "spark_uid=185"
+    user '${spark_uid}'
+  }
 }
 
 task createPythonDockerfile(type: Dockerfile) {
   destFile = outputFilePython
   arg "spark_version"
   from 'spark-py:$spark_version'
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("3.0.0")) {
+    user "0"
+  }
   copyFile("h2o_pysparkling_${sparkMajorVersion}-${version}.zip", "/opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip")
   runCommand "pip install /opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip"
   if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("2.4.5")) {
@@ -94,6 +104,10 @@ task createPythonDockerfile(type: Dockerfile) {
                 """
   }
   copyFile("python/initTest.py", "/opt/sparkling-water/tests/initTest.py")
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("3.0.0")) {
+    arg "spark_uid=185"
+    user '${spark_uid}'
+  }
 }
 
 task buildDockerfiles(dependsOn: [createPythonDockerfile, createRDockerfile, createScalaDockerfile, createExternalBackendDockerfile])
