[SW-2266][FollowUp] Replace usage of deprecated properties

--- a/gradle/bench.gradle
+++ b/gradle/bench.gradle
@@ -33,8 +33,7 @@ task bench(type: Test) {
     // Increase test runner memory
     maxHeapSize = "4g"
 
-    systemProperty "spark.ext.h2o.node.log.dir", new File(project.getBuildDir(), "h2ologs-bench/nodes")
-    systemProperty "spark.ext.h2o.client.log.dir", new File(project.getBuildDir(), "h2ologs-bench/client")
+    systemProperty "spark.ext.h2o.log.dir", new File(project.getBuildDir(), "h2ologs-test")
 
     include "ai/h2o/sparkling/bench/**"
 
