--- a/gradle/sparkTest.gradle
+++ b/gradle/sparkTest.gradle
@@ -4,8 +4,7 @@ apply from: "$rootDir/gradle/utils.gradle"
 test {
     // Test environment
     systemProperty "spark.ext.h2o.backend.cluster.mode", detectBackendClusterMode()
-    systemProperty "spark.ext.h2o.node.log.dir", new File(project.getBuildDir(), "h2ologs-test/nodes")
-    systemProperty "spark.ext.h2o.client.log.dir", new File(project.getBuildDir(), "h2ologs-test/client")
+    systemProperty "spark.ext.h2o.log.dir", new File(project.getBuildDir(), "h2ologs-test")
     systemProperty "spark.ext.h2o.external.disable.version.check", "true"
     systemProperty "spark.driver.memory", "1G"
     // Run with assertions ON
