[SW-2266][FollowUp] Replace usage of deprecated properties

--- a/py/build.gradle
+++ b/py/build.gradle
@@ -305,7 +305,7 @@ def createIntegTestArgs() {
     "spark.testing=true",
     "spark.ext.h2o.backend.cluster.mode=${detectBackendClusterMode()}",
     "spark.test.home=${sparkHome}",
-    "spark.ext.h2o.node.log.dir=${buildDir}/h2ologs-itest",
+    "spark.ext.h2o.log.dir=${buildDir}/h2ologs-itest",
     "spark.ext.h2o.external.disable.version.check=true"
   ]
 }
