:tada:  [Gradle Release Plugin] - new version commit:  'RELEASE-3.30.0.6-1-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,5 +27,5 @@ supportedSparkVersions=2.1 2.2 2.3 2.4 3.0
 # Select for which Spark version is Sparkling Water built by default
 spark=3.0
 # Sparkling Water Version
-version=3.30.0.5-1
+version=3.30.0.6-1-SNAPSHOT
 spotlessModern=true
